--- a/Desafios/d012/style.css
+++ b/Desafios/d012/style.css
@@ -2,12 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2:'Passion One', cursive;
+    --font3:'Sriracha', cursive;
+}
+
 * {
-    
-    font-family: 'Sriracha', cursive;
-    font-size: 3vh;
-    margin: auto;
-    
+    margin: 0;
+}
+
+html, body {
+    font-family: var(--font1);
+    min-height: 100vh;
+    background-color: darkgrey;
 }
 
 header {
@@ -15,34 +23,47 @@ header {
     background-color: black;
     color: white;
     align-content: center;
-
 }
 
 h1 {
+    padding: 50px;
+    font-variant: small-caps;
     font-size: 10vh;
-    font-family: 'Passion One', cursive;
-    
+    font-size: 10vw;
+    font-family: var(--font2);
+}
+
+header p{
+    padding-bottom: 50px;
+    font-size: 20px;
+}
+
+section {
+    font-family: var(--font3);
+    font-size: 2vh;
+    font-size: 2.5vw;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2.5em;
+    padding-left: 30px;
+
 }
 
 .normal{
-    padding: 20px;
-    line-height: 3em;
-    font-family: 'Courier New', Courier, monospace;
-
+    background-color: white;
+    color: black;
 }
 
 .imagem{
-    padding-top: 100px;
-    line-height: 3em;
-    max-width: 100%;
-    height: 800px;
+    padding-left: 0;
+    background-color: rgb(0, 0, 0);
+    width: 100vw;
     color: white;
     background-repeat: no-repeat;
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
-    margin-left: 0;
-
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
 }
 
 #img01 {
@@ -55,7 +76,17 @@ h1 {
     background-image: url('imagens/background002.jpg');
 }
 
+.imagem p {
+    text-shadow: 1px 1px 0px black;
+    display: inline-block;
+    margin-left: 0;
+    padding:7px 7px 7px 30px;
+
+    background-color: rgba(0, 0, 0, 0.493);
+}
+
 footer {
+    padding: 10px;
     text-align: center;
     background-color: black;
     color: white;
@@ -64,15 +95,10 @@ footer {
 a {
     text-decoration: none;
     color: white;
+    font-weight: bolder;
 }
 
 a:hover {
     text-decoration: underline;
 }
 
-.imagem p {
-    margin-left: 0;
-    width:50% ;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.178);
-}
