--- a/Desafios/d001/style.css
+++ b/Desafios/d001/style.css
@@ -1,6 +1,39 @@
 @charset "UTF-8";
 
+:root {
+    --cor0:#F2E7DC;
+    --cor1:#A9D9D0;
+    --cor2:#038C7F;
+    --cor3:#027373;
+    --cor4:#10403B;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 2px;
+    background-color: var(--cor1);
+    height: 97vh;
+}
+
+header {
+    background-color: black;
+    color: var(--cor0);
+    text-align: center;
+    padding: 30px;
+    text-shadow: 3px 3px 4px black;
+    margin-bottom: 80px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.418);
+}
+
+section {
+    background-color: var(--cor4);
+    margin: auto;
+    width: 50%;
+    color: var(--cor0);
+    text-align: center;
+    font-weight: bolder;
+    padding: 20px;
+    border-radius: 25px;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
 }
