--- a/Desafios/d006/style.css
+++ b/Desafios/d006/style.css
@@ -23,19 +23,16 @@ header {
     padding: 30px;
     text-shadow: 3px 3px 4px black;
     margin-bottom: 80px;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.418)
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.418);
 }
 
-
-section{
+main {
     background-color: var(--cor4);
     margin: auto;
     width: 50%;
     color: var(--cor0);
-    text-align: center;
     font-weight: bolder;
     padding: 20px;
     border-radius: 25px;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
 }
-
