--- a/Desafios/d009/style.css
+++ b/Desafios/d009/style.css
@@ -11,7 +11,8 @@
 body {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    letter-spacing: 2px;
+    letter-spacing: 5px;
+    line-height: 40px;
     background-color: var(--cor1);
     height: 97vh;
 }
@@ -23,14 +24,13 @@ header {
     padding: 30px;
     text-shadow: 3px 3px 4px black;
     margin-bottom: 80px;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.418)
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.418);
 }
 
-
-section{
+#principal {
     background-color: var(--cor4);
     margin: auto;
-    width: 50%;
+    width: 60%;
     color: var(--cor0);
     text-align: center;
     font-weight: bolder;
@@ -39,3 +39,28 @@ section{
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
 }
 
+.video {
+    background-color: var(--cor4);
+    margin: auto;
+    width: 59%;
+    color: var(--cor0);
+    font-weight: bolder;
+    padding: 20px;
+    border-radius: 25px;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
+    letter-spacing: 0px;
+    line-height: 0px;
+}
+
+p {
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: var(--cor0);
+}
+
+a:hover {
+    text-decoration: underline;
+}
