--- a/Desafios/d005/style.css
+++ b/Desafios/d005/style.css
@@ -11,7 +11,7 @@
 body {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: white;
+    background-color: var(--cor1);
     height: 100vh;
 }
 
@@ -27,20 +27,19 @@ header {
 main {
     margin: auto;
     width: 90%;
-    height: 700px;
+    height: 80vh;
     padding: 20px;
-    background-color: var(--cor1);
-    border-radius: 0px 0px 10px 0px;
+    background-color: var(--cor0);
 }
 
 article h2 {
-    margin-left: -19px;
-    margin-right: -19px;
+    margin-left: -19.5px;
+    margin-right: -19.5px;
     text-align: center;
     color: var(--cor0);
-    background-color: var(--cor2);
+    background-color: var(--cor3);
     padding: 7px;
-    margin-bottom: 15px;
+    text-shadow: 3px 3px 4px black;
 }
 
 article p {
@@ -48,38 +47,37 @@ article p {
     text-align: justify;
 }
 
-aside {
-    margin-top: 216px;
-    width: 230px;
+footer {
+    margin-top: 0px;
+    background-color: var(--cor0);
+    color: var(--cor0); 
 }
 
-aside h2 {
-    font-size: 20px;
-    text-align: center;
-    margin-bottom: 0;
-    background-color: var(--cor4);
-    color: var(--cor0);
-    margin-left: -20px;
-    padding: 7px;
-    border-radius: 0px 9px 0px 0px;
-}
-
-aside ul{
-    background-color: var(--cor2);
-    padding: 20px;
+footer h2 {
     margin-top: 0;
-    font-size: 16px;
-    line-height: 20px;
-    margin-left: -20px;
+    padding: 7px;
+    text-align: center;
+    background-color: black;
+    text-shadow: 3px 3px 4px black;
+
 }
 
-li a{
-    padding: 7px;
-    color: var(--cor0);
+footer ul {
+    columns: 3;
+}
+
+a {
+    color: black;
     text-decoration: none;
     font-weight: bolder;
+    line-height: 30px;
 }
 
-a:hover{
+a:hover {
     text-decoration: underline;
+    background-color: var(--cor1);
+    padding: 3px;
+    border-radius: 4px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.589)
+    
 }
