--- a/Desafios/d007/style.css
+++ b/Desafios/d007/style.css
@@ -11,7 +11,6 @@
 body {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    letter-spacing: 2px;
     background-color: var(--cor1);
     height: 97vh;
 }
@@ -27,9 +26,11 @@ header {
 }
 
 main {
-    background-color: var(--cor4);
-    color: var(--cor0);
+    margin-left: 7%;
+    margin-right: 7%;
+    background-color: var(--cor0);
     text-align: center;
-    font-weight: bolder;
     padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.281);
 }
