--- a/Desafios/d009/style.css
+++ b/Desafios/d009/style.css
@@ -11,8 +11,6 @@
 body {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    letter-spacing: 5px;
-    line-height: 40px;
     background-color: var(--cor1);
     height: 97vh;
 }
@@ -28,37 +26,35 @@ header {
 }
 
 #principal {
-    background-color: var(--cor4);
+    background-color: var(--cor0);
     margin: auto;
-    width: 60%;
-    color: var(--cor0);
+    width: 450px;
     text-align: center;
-    font-weight: bolder;
+    letter-spacing: 18px;
+    line-height: 45px;
     padding: 20px;
-    border-radius: 25px;
+    border-radius: 15px;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
 }
 
 .video {
-    background-color: var(--cor4);
+    background-color: var(--cor0);
     margin: auto;
-    width: 59%;
-    color: var(--cor0);
+    width: 565px;
     font-weight: bolder;
     padding: 20px;
-    border-radius: 25px;
+    border-radius: 15px;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
-    letter-spacing: 0px;
-    line-height: 0px;
 }
 
 p {
     text-align: center;
+    color: var(--cor4);
 }
 
 a {
     text-decoration: none;
-    color: var(--cor0);
+    color: var(--cor4);
 }
 
 a:hover {
