--- a/Desafios/d005/style.css
+++ b/Desafios/d005/style.css
@@ -50,8 +50,12 @@ article p {
 footer {
     margin-top: 0px;
     background-color: var(--cor0);
-    color: var(--cor0); 
+    color: var(--cor0);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
+
 
 footer h2 {
     margin-top: 0;
@@ -81,3 +85,4 @@ a:hover {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.589)
     
 }
+
