--- a/Desafios/d001/style.css
+++ b/Desafios/d001/style.css
@@ -9,30 +9,51 @@
 }
 
 body {
+    position: relative;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: var(--cor1);
-    height: 97vh;
+    height: 100vh;
 }
 
 header {
     background-color: black;
     color: var(--cor0);
     text-align: center;
-    padding: 30px;
-    text-shadow: 3px 3px 4px black;
-    margin-bottom: 80px;
+    padding: 20px;
+    margin-bottom: 110px;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.418);
 }
 
 section {
     background-color: var(--cor0);
     margin: auto;
-    width: 300px;
+    width: 450px;
+    height: 450px;
     color: var(--cor4);
-    text-align: center;
     font-weight: bolder;
     padding: 20px;
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.295);
     border-radius: 15px;
-    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+section h1 {
+    color: var(--cor0);
+    background-color: var(--cor3);
+    text-align: center;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding: 7px;
+    margin-bottom: 30px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: black;
+    text-align: center;
+    color: var(--cor0);
+    text-decoration: underline;
 }
