--- a/Desafios/d009/style.css
+++ b/Desafios/d009/style.css
@@ -29,9 +29,10 @@ header {
     background-color: var(--cor0);
     margin: auto;
     width: 450px;
+    height: 450px;
     text-align: center;
     letter-spacing: 18px;
-    line-height: 45px;
+    line-height: 5em;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.452);
@@ -49,7 +50,7 @@ header {
 
 p {
     text-align: center;
-    color: var(--cor4);
+    color: var(--cor0);
 }
 
 a {
@@ -58,5 +59,15 @@ a {
 }
 
 a:hover {
+    text-decoration: underline;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: black;
+    text-align: center;
+    color: var(--cor0);
     text-decoration: underline;
 }
