--- a/Exercicios/ex026/mq002/estilos/style.css
+++ b/Exercicios/ex026/mq002/estilos/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
 /* configurações gerais */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    text-shadow:#1526a7 ;
+    padding: 10px;
+}
